# ChangeLog for sys-kernel/linux-firmware
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.38 2012/05/03 15:57:31 chithanh Exp $

*linux-firmware-20120502 (03 May 2012)

  03 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +linux-firmware-20120502.ebuild, linux-firmware-99999999.ebuild:
  New snapshot.

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  linux-firmware-20120125.ebuild:
  x86 stable wrt bug #406931

  19 Mar 2012; Markus Meier <maekke@gentoo.org> linux-firmware-20120125.ebuild:
  arm stable, bug #406931

  08 Mar 2012; Markos Chandras <hwoarang@gentoo.org>
  linux-firmware-20120125.ebuild:
  Stable on amd64 wrt bug #406931

  29 Feb 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,
  linux-firmware-20120125.ebuild, linux-firmware-20120219.ebuild,
  linux-firmware-99999999.ebuild:
  File collisions with rt2860-firmware and rt2870-firmware, thanks to
  Chí-Thanh Christopher Nguyễn for noticing.

*linux-firmware-20120219 (21 Feb 2012)

  21 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +linux-firmware-20120219.ebuild:
  New snapshot.

*linux-firmware-20120125 (03 Feb 2012)

  03 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,
  +linux-firmware-20120125.ebuild, linux-firmware-99999999.ebuild:
  New snapshot. Update download locations. Avoid installing empty directories,
  bug #396073.

  02 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-99999999.ebuild:
  Update location of upstream repository.

  01 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -linux-firmware-20110604.ebuild, -linux-firmware-20110709.ebuild,
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,