@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST linux-firmware-20110731.tar.bz2 15251521 RMD160 18be95d4e230726c02764d6ee5b12dc546c72922 SHA1 57df268331586c10531ec2249b85ccedd114e98b SHA256 f7e122642b99727db63ec6cf2fb64037e7e49a2e5db59a62cdba444a273905d3
 DIST linux-firmware-20110818.tar.bz2 16023823 RMD160 ff8f4f7fbfc3f9608d44d72bbc5f544f562e1a2d SHA1 4279c2937f7fc834441a3e78e286e6688c873c99 SHA256 4cf4ac66e2b3cff7550857ec7fa52d9d274c0000b2486b701d16f6e9cc57795d
 DIST linux-firmware-20120125.tar.gz 22407395 RMD160 930b8efa5ad05b93fbe79ade2c4e894ed819344b SHA1 84dadf2ab0ca26cb603da850ce0a113129f98a5a SHA256 be15aefa80668288fc1202f32f4be06fcc751eed5cceeaaeb65b6de1c71761aa
@@ -5,9 +8,16 @@ DIST linux-firmware-20120219.tar.gz 23579430 RMD160 77a3b07c8873812c796076319565
 DIST linux-firmware-20120502.tar.xz 14956760 RMD160 8c21a99d40dbeed4fc28c02f5f3d744915d92b7b SHA1 9ac33b46953bc794f48b76509eadb6a455ca444c SHA256 b660b4b315060214217370811ccf47593275717b73464046b16858a6812b88d8
 EBUILD linux-firmware-20110731.ebuild 2560 RMD160 cf20424fff36d90dc1e1403773a1ad3dabda1841 SHA1 9346f8209bf6e533a378fdf386b047f047d7a69e SHA256 799f8b8457951a94f1ca416d355c64ec6fc2c037e233a98e79aa6bad3d004aa1
 EBUILD linux-firmware-20110818.ebuild 2563 RMD160 35d896d6227459b267327800eca235e33c227f2e SHA1 a25afd19b6336eec16c522c09e723e9005d0ba90 SHA256 21bb44c0b84392cdc96bfb0d0bbb43256cd2ba419b7eb404ff751c4c7736bb00
-EBUILD linux-firmware-20120125.ebuild 2791 RMD160 ee095588cb6cf344be67db22660dc3149d56a705 SHA1 9e597e1f4f7b6e3bb375a750d45937b0a88f7132 SHA256 d2865a9804241f14f7982cf3e66d4b306241b8fdd4453233a8660a8dacc7f5ab
-EBUILD linux-firmware-20120219.ebuild 2793 RMD160 26ea48b1e19a432b378a776e7bb4f3897e180363 SHA1 24a886aa7295de689cad2f047a290637fcaf310e SHA256 e92c3e7e71ca1aed26ed20c89b83ab3a5c59647cea99213f6206d06f64aba1b4
-EBUILD linux-firmware-20120502.ebuild 2792 RMD160 b7bef6338c7538c23a4d5a5605775e85d9931b39 SHA1 dcbcdcad610eab3a140773dad45694333857984b SHA256 4c975cb6f34a02d2eb85311302495a13395b8426df90316e28a2a4cfb8f1df32
+EBUILD linux-firmware-20120125.ebuild 2794 RMD160 c50838d3bde36ad21935776a1023d86cd4cced39 SHA1 379756e8ad73f7347df47b22fdff1eff2765699f SHA256 8954f691218a1480ae0396393a41f2bf6a913b1bec509ec16882aed4ab109a02
+EBUILD linux-firmware-20120219.ebuild 2797 RMD160 71b9e2e6433ad2899de13ac6e34408e8de507b76 SHA1 02c5df02c7f0b923911e892fd7e3e9d081cd928d SHA256 208b8ed6be0efe52dab1a1acf935332f4d5d5046703bbf92656f29ef599909e3
+EBUILD linux-firmware-20120502.ebuild 2797 RMD160 7e6e59647d7875dd0e140616a61af0327837ce4a SHA1 271bf310f6ddb7084ebe70f4aa23a0fea6be38ea SHA256 6789c90212b0ce190f9ef67d4a56e9ffc77e9dc914d48c0ca7569716f10aba26
 EBUILD linux-firmware-99999999.ebuild 2777 RMD160 031c7f5c7f9828a8f8c62d0690b5dba3bee77340 SHA1 0f590308d0a1510fbb2b21bf297591aa6215188a SHA256 cbd1b9f829d7b6ea5beb5c26508378024468ee770a940bbcf00f58f8e78780ef
-MISC ChangeLog 7112 RMD160 c3758b61e2b7b3392a127ab387a404af9f038057 SHA1 ef6bec33944539d2d45060937eb44a4c6928c5e3 SHA256 9595d945e6edbe229125de903db5763db6c117e816989245cbb77e382ebab553
+MISC ChangeLog 7285 RMD160 55cde184ddd5f42b2bb8a38217beccd9aeb43563 SHA1 c4fc74c340f31d1db29c034feb1fbee3edc0dd96 SHA256 7c21a1a12296e4e2b967e4fd929740a49f25a810b8f00c844ecc67b783ff023e
 MISC metadata.xml 454 RMD160 486442b015182f3a69ac3420ee1fa8af56ca3938 SHA1 c9bbe5d0d641c8545d6f93be32e0fbb4751bc49e SHA256 981ce29c1ab948ee695b585601283674cb5079e054457829d9da06620e199f14
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk/DpcMACgkQuQc30/atMkBpBQCgqgWPDRJMLZeVeDdi9oNmzY0Z
+bUcAoKBH9kJLmlmTwmYqn/FzqI9LXHbp
+=Hn5B
+-----END PGP SIGNATURE-----
