@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/linux-firmware/Attic/linux-firmware-20120125.ebuild,v 1.5 2012/03/24 17:34:07 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/linux-firmware/Attic/linux-firmware-20120125.ebuild,v 1.6 2012/05/28 16:20:13 armin76 Exp $
 
 EAPI=4
 inherit savedconfig
@@ -17,7 +17,7 @@ DESCRIPTION="Linux firmware files"
 HOMEPAGE="http://git.kernel.org/?p=linux/kernel/git/firmware/linux-firmware.git"
 
 LICENSE="GPL-1 GPL-2 GPL-3 BSD freedist"
-KEYWORDS="amd64 arm x86"
+KEYWORDS="amd64 arm ~ia64 x86"
 SLOT="0"
 IUSE="savedconfig"
 
